--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           python-version: "3.10"
       - run: pip install --upgrade build
-      - name: Install pybio-utils including test dependencies
+      - name: Install pbiotools including test dependencies
         run: pip install .[test] --verbose
       - name: Run tests
         run: python -m pytest . -v
