--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,20 +21,14 @@ jobs:
       fail-fast: false
       matrix:
         os: ["ubuntu-latest", "macos-latest"]
-        python-version: ["3.7", "3.8", "3.9", "3.10"]
-        exclude: # Python v3.7 does not support Apple Silicon ARM64
-          - python-version: "3.7"
-            os: macos-latest
-        include: # run legacy versions on Intel CPUs
-          - python-version: "3.7"
-            os: macos-13
+        python-version: ["3.11", "3.12", "3.13"]
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
       - name: Install pbiotools including test dependencies
-        run: pip install .[test] --verbose
+        run: pip install .[tests] --verbose
       - name: Run tests
         run: python -m pytest . -v
   conda:
@@ -46,13 +40,7 @@ jobs:
       fail-fast: false
       matrix:
         os: ["ubuntu-latest", "macos-latest"]
-        python-version: ["3.7", "3.8", "3.9", "3.10"]
-        exclude: # Python v3.7 does not support Apple Silicon ARM64
-          - python-version: "3.7"
-            os: macos-latest
-        include: # run legacy versions on Intel CPUs
-          - python-version: "3.7"
-            os: macos-13
+        python-version: ["3.11", "3.12", "3.13"]
     steps:
       - uses: actions/checkout@v3
       - name: Create pbiotools conda environment
