--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -12,10 +12,10 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
         with:
-          python-version: "3.10"
+          python-version: "3.13"
       - run: pip install --upgrade build
       - name: Install pbiotools including test dependencies
-        run: pip install .[test] --verbose
+        run: pip install .[tests] --verbose
       - name: Run tests
         run: python -m pytest . -v
       - run: python -m build
